# fromthetransistor

./: .gitignore  Makefile  README.md  ftt  pyproject.toml
.github/workflows/: lint.yml  verify.yml
course/: AUTHORING.md  catalog.json  challenges.json  notebooks.json  references.json  source-outline.json
course/exams/: gate-00.json  gate-02.json  gate-03.json  gate-04.json  gate-05.json  gate-06.json  gate-07.json
labs/: TESTING.md  c-test.mk  test_support.h
labs/lab-00-bytes/: README.md  lab.json
labs/lab-01-logic/: README.md  lab.json
labs/lab-02-uart/: README.md  lab.json
labs/lab-03-assembler/: README.md  lab.json
labs/lab-03-cpu/: README.md  lab.json
labs/lab-04-allocator/: README.md  lab.json
labs/lab-04-compiler/: README.md  lab.json
labs/lab-04-linker/: README.md  lab.json
labs/lab-05-fat/: README.md  lab.json
labs/lab-05-pagewalk/: Makefile  README.md  lab.json
labs/lab-06-browser/: README.md  lab.json
labs/lab-07-jtag/: README.md  lab.json
src/ftt/: __init__.py  challenges.py  cli.py  model.py  progress.py  runner.py  validation.py
tests/: __init__.py  test_challenges.py  test_cli.py  test_course.py  test_model.py  test_native_c.py  test_notebooks.py  test_progress.py  test_runner.py
tools/: cc-ubsan  check_notebooks.py  sync_challenges.py  sync_native_c_tests.py  sync_references.py
vault/: Capstone - Browser in a Box.md  Challenge Atlas.md  Course Map.md  Glossary.md  Home.md  Learner Guide.md  Notebook Guide.md  Reference Shelf.md
vault/00 C Runway/: 00.01 Course Orientation.md  00.02 Shell Build and Debug Loop.md  (+7 more)
(+94 files in other folders)
