[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fromthetransistor-course"
version = "0.2.0"
description = "A runnable, software-first course from logic gates to a text web browser"
requires-python = ">=3.11"

[project.optional-dependencies]
notebooks = ["jupyterlab"]
dev = ["ruff==0.12.2"]

[project.scripts]
ftt = "ftt.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Begin with correctness checks. Style can be tightened incrementally without
# making unrelated course work rewrite the entire existing codebase.
select = ["E4", "E7", "E9", "F"]
